# RSC

./: .gitignore  README.md
Documentation/: README.md
code/: README  analyze.sh  config  config.template
code/scripts/: clang-bc-gen  clang-bc-gen.sh  inline-list
code/scripts/bcdep/: bc-mkgen.py  depgen.py  markeff.py  mkgen.py  scc.py
code/src/: CMakeLists.txt  CallGraph.cc  rsc_CallGraph.h
code/src/include/: Formula.h  FormulaVisitor.h  FsigAnalysis.h  PathIterator.h  Summary.h  rsc_utils.h  util.h
code/src/lib/: CMakeLists.txt  Formula.cpp  FormulaVisitor.cpp  FsigAnalysis.cpp  FsigConstantAnalysis.cpp  FsigPointerAnalysis.cpp  PathIterator.cpp  PredefinedSummary.cpp  Serialization.cpp  Summary.cpp  util.cpp
code/src/tools/rsc/: CMakeLists.txt  MaySleeping.cpp  RSC.cpp
src/: CMakeLists.txt
src/test/demo-test/: demo-test.sh  test.c
src/tools/demo-tool/: CMakeLists.txt  demo.cpp
前期准备/: Preempt-RT Linux对Linux的实时性扩展设计.md  Preempt-RT开发与升级.md  linux源码的打patch、编译、安装、运行.md  函数指针的初始化.md
前期准备/Paper Reading/A systematic survey on automated concurrency bug detection, exposing, avoidance, and fixing techniques/: Reading Reports.md
前期准备/Porting/4.16-4.17/: patch.analyze  patches_name.txt
